# P

./: .clang-format  CMakeLists.txt  LICENSE  TODO.md
.github/workflows/: tests.yml
bench/: CMakeLists.txt  parser_bm.cpp  tokenizer_bm.cpp
examples/: simple.p
libp/: CMakeLists.txt  defs.h  exit.c  exit.h  malloc.c  malloc.h  memory.c  memory.h  print.c  print.h  sighandle.S  sighandle.c  sighandle.h  string.c  string.h  sys_wrapper.c  sys_wrapper.h  thread.S  thread.c  thread.h
spec/: language.md  stdlib.md  syntax.md
src/: codegen.cpp  codegen.hpp  diagnostic.cpp  diagnostic.hpp  ir.cpp  ir.hpp  ir_optimizer.cpp  ir_optimizer.hpp  logger.hpp  main.cpp  parser.cpp  parser.hpp  reg_alloc.cpp  reg_alloc.hpp  sema.cpp  sema.hpp  shared_ops.hpp  tokenizer.cpp  tokenizer.hpp  type.hpp  utils.hpp
tests/: CMakeLists.txt  run_test.py  test_main.cpp  test_parse_expr.h
tests/e2e/: arr.p  call.p  call_dynamic.p  cf.p  enum.p  expr.p  float.p  impcast.p  io.p  malloc.p  namespace.p  nested.p  ptr_swap.p  shadow.p  signal.p  simple.p  string.p  struct.p  structfp.p  union.p
